RESOLVED FIXED280528
[EWS macOS] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=280528
Summary [EWS macOS] imported/w3c/web-platform-tests/web-animations/timing-model/timel...
Marta Darbinyan
Reported 2024-09-27 11:25:13 PDT
Observing false positive failures on Sonoma and Ventura EWS queues. The test is flaky failure with text diff on main on Ventura+ Release. Suspecting the test regressed after 284168@main change. -PASS Document timelines report current time relative to navigationStart +FAIL Document timelines report current time relative to navigationStart assert_equals: The current time matches requestAnimationFrame time expected 13 but got 13.000000000000002 PASS Child frames do not report negative initial times Link: https://build.webkit.org/results/Apple-Ventura-Release-WK2-Tests/284232@main%20(8209)/imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines-pretty-diff.html History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fweb-animations%2Ftiming-model%2Ftimelines%2Fdocument-timelines.html&style=release
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-27 11:26:02 PDT
EWS
Comment 2 2024-09-27 12:40:37 PDT
Test gardening commit 284385@main (94b450b04cd0): <https://commits.webkit.org/284385@main> Reviewed commits have been landed. Closing PR #34377 and removing active labels.
Antoine Quint
Comment 3 2024-09-30 03:03:38 PDT
EWS
Comment 4 2024-09-30 06:33:23 PDT
Committed 284448@main (12b70e251e35): <https://commits.webkit.org/284448@main> Reviewed commits have been landed. Closing PR #34445 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.