[EWS macOS] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=280528 rdar://136843486

Reviewed by Antti Koivisto.

Ensure that when a CSSNumberishTime is converted automatically to an API-facing type,
either `double` or `CSSNumberish`, we go through the `secondsToWebAnimationsAPITime`
utility to round the time value per https://drafts.csswg.org/web-animations-1/#precision-of-time-values.

This allows us to remove some bindings-specific code as well, which is how this bug
surfaced in the first place with 284168@main.

* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/animation/AnimationPlaybackEvent.cpp:
(WebCore::AnimationPlaybackEvent::bindingsCurrentTime const): Deleted.
(WebCore::AnimationPlaybackEvent::bindingsTimelineTime const): Deleted.
* Source/WebCore/animation/AnimationPlaybackEvent.h:
* Source/WebCore/animation/AnimationPlaybackEvent.idl:
* Source/WebCore/animation/CSSNumberishTime.cpp:
(WebCore::CSSNumberishTime::operator double const):
(WebCore::CSSNumberishTime::operator CSSNumberish const):
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::bindingsStartTime const): Deleted.
(WebCore::WebAnimation::bindingsCurrentTime const): Deleted.
* Source/WebCore/animation/WebAnimation.h:
(WebCore::WebAnimation::bindingsStartTime const):
(WebCore::WebAnimation::bindingsCurrentTime const):

Canonical link: https://commits.webkit.org/284448@main